--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,3 @@
 [workspace]
-members = ["ormx-macros", "ormx", "example-postgres", "example-mysql"]
+members = ["ormx-macros", "ormx", "example-postgres", "example-mariadb", "example-mysql"]
+resolver = "2"
