--- a/example-mariadb/Cargo.toml
+++ b/example-mariadb/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "example-mysql"
+name = "example-mariadb"
 version = "0.1.0"
 authors = ["moritz"]
 edition = "2021"
 
 [dependencies]
-ormx = { path = "../ormx", features = ["mysql"] }
+ormx = { path = "../ormx", features = ["mariadb"] }
 tokio = { version = "1", features = ["full"] }
 anyhow = "1"
 dotenv = "0.15"
