--- a/example-postgres/Cargo.toml
+++ b/example-postgres/Cargo.toml
@@ -2,18 +2,18 @@
 name = "example-postgres"
 version = "0.1.0"
 authors = ["moritz"]
-edition = "2018"
+edition = "2021"
 
 [dependencies]
 ormx = { path = "../ormx", features = ["postgres"] }
-tokio = { version = "1.1", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
 anyhow = "1"
 dotenv = "0.15"
 chrono = "0.4"
-simple_logger = "1"
+env_logger = "0.11.5"
 log = "0.4"
 
 [dependencies.sqlx]
-version = "0.6"
+version = "0.8"
 default-features = false
-features = ["macros", "postgres", "runtime-tokio-rustls", "chrono", "offline"]
+features = ["macros", "postgres", "runtime-tokio-rustls", "chrono"]
