--- a/ormx-macros/Cargo.toml
+++ b/ormx-macros/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "ormx-macros"
-version = "0.10.4"
+version = "0.11.0"
 authors = ["moritz"]
-edition = "2018"
+edition = "2021"
 description = "lightweight procedural macros bringing orm-like features to sqlx"
 homepage = "https://github.com/NyxCode/ormx"
 license = "MIT"
@@ -13,12 +13,13 @@ proc-macro = true
 [features]
 sqlite = []
 mysql = []
+mariadb = []
 postgres = []
 
 [dependencies]
-itertools = "0.10"
+itertools = "0.13.0"
 proc-macro2 = "1"
 quote = "1"
-syn = { version = "1", features = ["full"] }
+syn = { version = "2", features = ["full"] }
 once_cell = "1"
 proc-macro-error = "1"
